// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 51502,
}
`;

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext no op 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 26433,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282238,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261928,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254634,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 406849,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254634,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 347768,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick above 1`] = `34852`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick below 1`] = `34811`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick inside 1`] = `40091`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 246556,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 233760,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 270763,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 325799,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 258604,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 325799,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 325799,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 246556,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 233848,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 259899,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 314908,
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 51502,
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext no op 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 26433,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282238,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187264,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261928,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254634,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 406849,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254634,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 347768,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187940,
}
`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick above 1`] = `34852`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick below 1`] = `34811`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick inside 1`] = `40091`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 250870,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237956,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 275195,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 330584,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 263153,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 330584,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 330584,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 250870,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 238045,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 264213,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 319575,
}
`;
